# super_homunculus_bot

./: .env.example  .gitignore  LICENSE  README.md  README_KO.md  pyproject.toml
docs/: ARCHITECTURE.md
homunculus/: __init__.py
homunculus/ai/: __init__.py  bridge.py
homunculus/automation/: __init__.py  browser.py
homunculus/core/: __init__.py  engine.py  lock.py  memory.py  store.py
homunculus/session/: __init__.py  manager.py
scripts/: autoexecutor.bat  autoexecutor.sh  get_my_id.py  register_scheduler.bat  run_discord.py  run_telegram.py  setup.bat  setup_scheduler.sh
tests/: test_engine.py  test_lock.py  test_memory.py  test_session.py  test_store.py
